--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ section {
     color: hsl(0, 0%, 100%);
     text-align: center;
     font-weight: var(--semi-bold);
+    font-size: 1.5rem;
 }
 
 .text p:first-of-type {
