--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ section {
 
 button {
     width: 40vh;
-    width: 300px;
+    max-width: 300px;
     background-color: hsl(0, 0%, 20%);
     border: 0;
     min-height: 45px;
